tests/compile_fail/def_type_is_duplicated.stderr
error: def_type is duplicated in #[def(...)].
 --> $DIR/def_type_is_duplicated.rs:5:46
  |
5 |     #[def(field_num = 1, def_type = "int32", def_type = "int32")]
  |                                              ^^^^^^^^^^^^^^^^^^
